# rypi-scrapper

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  structs.rs  utils.rs
src/components/: index.ts
src/components/Button/: Button.tsx
src/components/Downloader/: Downloader.tsx  index.ts
src/components/TitleBar/: TitleBar.tsx
src/components/Window/: Window.tsx
src/components/design/: index.ts
src/components/design/AnimateView/: AnimateView.tsx
src/components/design/Button/: Button.tsx
src/components/design/Flag/: Flag.tsx
src/components/design/Image/: Image.tsx
src/components/design/Loader/: Loader.tsx
src/components/layout/: index.ts
src/components/layout/Button/: Button.tsx
src/components/layout/Downloaders/: Downloaders.tsx  index.ts
src/components/layout/Downloaders/Downloader/: Downloader.tsx
src/components/layout/LangDropdown/: LangDropdown.tsx
src/components/layout/OutSideEventHandler/: OutSideEventHandler.tsx  index.ts
src/components/layout/Popup/: Popup.tsx
src/components/layout/TitleBar/: TitleBar.tsx
src/components/system/: index.ts
src/components/system/AnimateView/: AnimateView.tsx  index.ts
src/components/system/Image/: Image.tsx
src/components/system/Popup/: Popup.tsx
src/components/system/TitleBar/: TitleBar.tsx
src/components/system/Window/: Window.tsx
src/config/: Animation.ts  Convertion.ts  Domain.ts  ENDPOINTS.ts  Endpoints.ts  GameDownloader.ts  REGISTERED_KEYS.ts  index.ts
src/controllers/: EffectMap.ts  FigureData.ts  FigureMap.ts  FurniData.ts  index.ts
src/hooks/: useLocalStorage.ts  useOutsideClickEventHandler.ts
src/mapping/: convertTXT.ts  convertXML.ts  index.ts
src/styles/: fonts.css  styles.css
src/tools/: convertTXT.ts  fetchGamedata.ts  fetchGamedataConfig.ts  handleConvertion.ts  index.ts  parseData.ts  rusty.ts
src/types/: Converters.d.ts  Domain.d.ts  Endpoint.d.ts  SubConverters.d.ts  global.d.ts  index.d.ts
src/utils/: fetchGameData.ts  parseData.ts
